feat: Add URL query string parsing to FhirSearch
Add fromQueryString() factory method to parse FHIR search query strings:
- Handles URL-encoded values (RFC 3986)
- Supports comma-separated values (OR logic)
- Supports repeated parameters (AND logic)
- Handles FHIR escape sequences (\, for literal comma, \\ for backslash)
- Extracts modifiers from parameter names (e.g., family:exact)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>